INT-13492: Fix for file picker in Snap, not showing all the repositories

--- a/scss/_filemanager.scss
+++ b/scss/_filemanager.scss
@@ -36,6 +36,11 @@
     background: $body-bg;
 }
 
+// Fix for file picker in Snap, not showing all the repositories.
+.moodle-dialogue-base .moodle-dialogue.filepicker  {
+    overflow: scroll;
+}
+
 .jschooser .choosercontainer #chooseform .alloptions {
     max-height: calc(100vh - 10rem) !important; // Overules JS caculated value.
 }
